--------------------------------------------------------------------------------
drkns 2024-05-02 19:59:34+01:00 - build 6326

1. Continue 6324.3.

--------------------------------------------------------------------------------
johnd0e 2024-05-01 22:52:00+02:00 - build 6325

1. gh-835 / M3557: Enhance the function mf.flock to enable switching the Lock-state
   even when a key is held.

--------------------------------------------------------------------------------
drkns 2024-05-01 21:20:54+01:00 - build 6324

1. 0004042: In text fields the "unchanged text" color is applied to the whole field.

2. Fix menu scrollbars.

3. (Hopefully) correct scrollbar logic in corner cases.

--------------------------------------------------------------------------------
drkns 2024-04-29 17:21:29+01:00 - build 6323

1. Correction of 6318.1.

--------------------------------------------------------------------------------
shmuel 2024-04-29 00:47:53+03:00 - build 6322

1. Correct mf.atoi()

--------------------------------------------------------------------------------
shmuel 2024-04-28 21:55:56+03:00 - build 6321

1. Fix mf.itoa()

--------------------------------------------------------------------------------
drkns 2024-04-28 19:47:48+01:00 - build 6320

1. Exception handling improvements.

--------------------------------------------------------------------------------
shmuel 2024-04-28 19:47:03+03:00 - build 6319

1. Fix mf.foldershortcuts()

2. Fix mf.atoi()

--------------------------------------------------------------------------------
drkns 2024-04-28 13:28:25+01:00 - build 6318

1. Correctly handle repeated key event records.

2. Refactoring.

--------------------------------------------------------------------------------
shmuel 2024-04-27 16:37:38+03:00 - build 6317

1. Macro-API: add the following function to mf table:
              fileassociations, filehighlight, filepanelmodes, foldershortcuts.
