@@ -1332,7 +1332,7 @@ lv=3
 dt=Text
 nm=mainmenu
 ctime=3923468674
-mtime=3923469243
+mtime=3924000506
 <article>
 #_mf.mainmenu (Param)
 #_
@@ -1345,6 +1345,7 @@ mtime=3923469243
 #_**Param values:**
 #_  "fileassociations" : call "File associations" menu
 #_  "filehighlighting" : call "Files highlighting and sort groups" menu
+#_  "filemaskgroups"   : call "Groups of file masks" menu
 #_  "filepanelmodes"   : call "File panel modes" menu
 #_  "foldershortcuts"  : call "Folder shortcuts" menu
 #_
