@@ -1323,7 +1323,7 @@ lv=3
 dt=Text
 nm=mainmenu
 ctime=3923469402
-mtime=3923469625
+mtime=3924000565
 <article>
 #_mf.mainmenu (Param)
 #_
@@ -1336,6 +1336,7 @@ mtime=3923469625
 #_**Значения Param:**
 #_  "fileassociations" : вызвать меню "File associations"
 #_  "filehighlighting" : вызвать меню "Files highlighting and sort groups"
+#_  "filemaskgroups"   : вызвать меню "Groups of file masks"
 #_  "filepanelmodes"   : вызвать меню "File panel modes"
 #_  "foldershortcuts"  : вызвать меню "Folder shortcuts"
 #_
