@@ -448,6 +448,7 @@ public:
 	void LocalEditorConfig(EditorOptions &EdOptRef) {return EditorConfig(EdOptRef, true);}
 	void SetSearchColumns(string_view Columns, string_view Widths);
 	void SetFilePanelModes();
+	static void MaskGroupsSettings();
 
 	struct SortingOptions
 	{
@@ -1065,7 +1066,6 @@ private:
 	void EditorConfig(EditorOptions &EdOptRef, bool Local = false);
 	void SetFolderInfoFiles();
 	void InfoPanelSettings();
-	static void MaskGroupsSettings();
 	void AutoCompleteSettings();
 	void TreeSettings();
 	void SetViewSettings(size_t Index, PanelViewSettings&& Data);
