@@ -2951,6 +2951,7 @@ enum MACROPLUGINRETURNTYPE
 	MPRT_FILEHIGHLIGHT    = 12,
 	MPRT_FILEPANELMODES   = 13,
 	MPRT_FOLDERSHORTCUTS  = 14,
+	MPRT_FILEMASKGROUPS   = 15,
 };
 
 struct OpenMacroPluginInfo
