@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+shmuel 2024-05-04 15:58:16+03:00 - build 6327
+
+1. mf.mainmenu: add parameter 'filemaskgroups'.
+
+--------------------------------------------------------------------------------
 drkns 2024-05-02 19:59:34+01:00 - build 6326
 
 1. Continue 6324.3.
